swagger doc improvements
